--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,8 @@ avana.tsv filter=lfs diff=lfs merge=lfs -text
 CRISPRGeneEffect_23Q4[[:space:]]copy.csv filter=lfs diff=lfs merge=lfs -text
 OmicsExpressionProteinCodingGenesTPMLogp1(23Q4)[[:space:]]copy.csv filter=lfs diff=lfs merge=lfs -text
 *.md filter=lfs diff=lfs merge=lfs -text
+*.tsv filter=lfs diff=lfs merge=lfs -text
+*.csv filter=lfs diff=lfs merge=lfs -text
+*.txt filter=lfs diff=lfs merge=lfs -text
+*.xlsx filter=lfs diff=lfs merge=lfs -text
+*.R filter=lfs diff=lfs merge=lfs -text
