--- a/.gitattributes
+++ b/.gitattributes
@@ -10,3 +10,6 @@ OmicsExpressionProteinCodingGenesTPMLogp1(23Q4)[[:space:]]copy.csv filter=lfs di
 *.xlsx filter=lfs diff=lfs merge=lfs -text
 *.R filter=lfs diff=lfs merge=lfs -text
 *.json filter=lfs diff=lfs merge=lfs -text
+*.Rprofile filter=lfs diff=lfs merge=lfs -text
+*.lock filter=lfs diff=lfs merge=lfs -text
+*.gitignore filter=lfs diff=lfs merge=lfs -text
