--- a/.gitattributes
+++ b/.gitattributes
@@ -15,3 +15,4 @@ OmicsExpressionProteinCodingGenesTPMLogp1(23Q4)[[:space:]]copy.csv filter=lfs di
 *.gitignore filter=lfs diff=lfs merge=lfs -text
 *.tiff filter=lfs diff=lfs merge=lfs -text
 *.pdf filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
