--- a/.gitattributes
+++ b/.gitattributes
@@ -16,3 +16,4 @@ OmicsExpressionProteinCodingGenesTPMLogp1(23Q4)[[:space:]]copy.csv filter=lfs di
 *.tiff filter=lfs diff=lfs merge=lfs -text
 *.pdf filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
+*.jpeg filter=lfs diff=lfs merge=lfs -text
