--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,18 @@
 data/OmicsExpressionProteinCodingGenesTPMLogp1(23Q4).csv filter=lfs diff=lfs merge=lfs -text
+data/CRISPRGeneEffect_23Q4.csv filter=lfs diff=lfs merge=lfs -text
+data/MAGeCK_UVM_Vs_Pancancer_2_input_file.csv filter=lfs diff=lfs merge=lfs -text
+data/combined_singles_results.scaled.tsv filter=lfs diff=lfs merge=lfs -text
+data/Model_23Q4.csv filter=lfs diff=lfs merge=lfs -text
+data/Supplementary[[:space:]]Table[[:space:]]9.csv filter=lfs diff=lfs merge=lfs -text
+data/2nd_July_2024.csv filter=lfs diff=lfs merge=lfs -text
+data/CEGv2.txt filter=lfs diff=lfs merge=lfs -text
+data/CRISPRInferredCommonEssentials_24Q2.csv filter=lfs diff=lfs merge=lfs -text
+data/SinglesResults_ParalogPairDerived_previous_screen.csv filter=lfs diff=lfs merge=lfs -text
+data/mRNA_expression_RSEM_batch_normalized_illumina_HiSeq_RNASeqV2.txt filter=lfs diff=lfs merge=lfs -text
+data/mageck_output.tsv filter=lfs diff=lfs merge=lfs -text
+data/230820_PairedScreen_DotPlot_Rinput.csv filter=lfs diff=lfs merge=lfs -text
+data/6460_htseq_tpm-ENSv103_NEW_RNA_Seq.txt filter=lfs diff=lfs merge=lfs -text
+data/Supplementary[[:space:]]Table[[:space:]]6.xlsx filter=lfs diff=lfs merge=lfs -text
 *.Rprofile filter=lfs diff=lfs merge=lfs -text
 *.json filter=lfs diff=lfs merge=lfs -text
 *.tsv filter=lfs diff=lfs merge=lfs -text
