--- a/.gitattributes
+++ b/.gitattributes
@@ -22,3 +22,5 @@ OmicsExpressionProteinCodingGenesTPMLogp1(23Q4)[[:space:]]copy.csv filter=lfs di
 *.txt filter=lfs diff=lfs merge=lfs -text
 *.xlsx filter=lfs diff=lfs merge=lfs -text
 data/* filter=lfs diff=lfs merge=lfs -text
+data/* !text !filter !merge !diff
+README.md !text !filter !merge !diff
